@@ -1,3 +1,14 @@
+2007-02-28  Raphaël Quinet  <raphael@gimp.org>
+
+	* app/tools/gimpmeasuretool.[ch]: added status bar help messages
+	explaining the usage of the modifiers.
+
+	* app/tools/gimpvectortool.c (gimp_vector_tool_status_update):
+	suggest Ctrl for edit mode, to close the path or move handles.
+
+	* app/tools/gimpcroptool.c (gimp_crop_tool_button_release):
+	"press enter" should be "press Enter", as in the other tools.
+
 2007-02-28  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimpmeasuretool.c: made labels selectable.
